Fix: Disable Logo text wrapping

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -8,6 +8,7 @@
 
 	.logo:hover ::after{
 		content: ' 🌱';
+		white-space: nowrap;
 	}
 
 	.dark .logo {
